--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Birthday Color and Vegetable</title>
+<link rel="stylesheet" href="./css/konafa.css">
 </head>
 <body>
 
