--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>محلاها حلاوته الحلواني</title>
-<link rel="stylesheet" href="./css/konafa.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>محلاها حلاوته الحلواني</title>
+    <link rel="stylesheet" href="./css/konafa.css" />
+  </head>
+  <body>
+    <h2>لو كنت كنافة</h2>
+    <h2>اختار يوم ميلادك مع الشهر وشوف وانت كنافة هتبقا ايه</h2>
 
-<h2>Find Your Birthday Color and Vegetable</h2>
+    <label for="birthday">Enter Your Birthday (DD/MM):</label>
+    <input type="text" id="birthday" placeholder="DD/MM" maxlength="5" />
+    <button onclick="findColorAndVegetable()">Find</button>
 
-<label for="birthday">Enter Your Birthday (DD/MM):</label>
-<input type="text" id="birthday" placeholder="DD/MM" maxlength="5">
-<button onclick="findColorAndVegetable()">Find</button>
+    <p id="output" class="fade-in"></p>
 
-<p id="output" class="fade-in"></p>
-
-<script src="./js/konafa.js"></script>
-
-</body>
+    <script src="./js/konafa.js"></script>
+  </body>
 </html>
