--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h2>لو كنت كنافة</h2>
     <h3>اختار يوم ميلادك مع الشهر وشوف وانت كنافة هتبقا ايه</h3>
 
-    <label for="birthday">Enter Your Birthday (DD/MM):</label>
-    <input type="text" id="birthday" placeholder="DD/MM" maxlength="5" />
-    <button onclick="findColorAndVegetable()">Find</button>
+    <label for="birthday">Enter Your Birthday (يوم/شهر):</label>
+    <input type="text" id="birthday" placeholder="يوم/شهر" maxlength="5" />
+    <button onclick="findColorAndVegetable()">وريني</button>
 
     <p id="output" class="fade-in"></p>
 
