--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>لو كنت كنافة</h2>
     <h3>اختار يوم ميلادك مع الشهر وشوف وانت كنافة هتبقا ايه</h3>
 
-    <label for="birthday">Enter Your Birthday (يوم/شهر):</label>
+    <label for="birthday">(يوم / شهر)</label>
     <input type="text" id="birthday" placeholder="يوم/شهر" maxlength="5" />
     <button onclick="findColorAndVegetable()">وريني</button>
 
