--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <link rel="stylesheet" href="./css/konafa.css" />
   </head>
   <body>
-    <h2>لو كنت كنافة</h2>
-    <h3>اختار يوم ميلادك مع الشهر وشوف وانت كنافة هتبقا ايه</h3>
-
-    <label for="birthday">(يوم / شهر)</label>
-    <input type="text" id="birthday" placeholder="يوم/شهر" maxlength="5" />
-    <button onclick="findColorAndVegetable()">وريني</button>
-
-    <p id="output" class="fade-in"></p>
-
+    <div class="container">
+      <h2>لو كنت كنافة</h2>
+      <h3>اختار يوم ميلادك مع الشهر وشوف وانت كنافة هتبقا ايه</h3>
+      <label for="birthday">(يوم / شهر)</label>
+      <input type="text" id="birthday" placeholder="يوم/شهر" maxlength="5" />
+      <button onclick="findColorAndVegetable()">وريني</button>
+      <p id="output" class="fade-in"></p>
+    </div>
     <script src="./js/konafa.js"></script>
   </body>
 </html>
