--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <link rel="stylesheet" href="./css/konafa.css" />
   </head>
   <body>
+    <div class="lay"></div>
     <div class="container">
-      <h2>لو كنت كنافة</h2>
-      <h3>اختار يوم ميلادك مع الشهر وشوف وانت كنافة هتبقا ايه</h3>
+      <h2 >لو كنت كنافة</h2>
+      <h3 >اختار يوم ميلادك مع الشهر وشوف وانت كنافة هتبقا ايه</h3>
       <div class="flexo">
         <label for="birthday">(يوم / شهر)</label>
         <input type="text" id="birthday" placeholder="يوم/شهر" maxlength="5" />
         <button onclick="findColorAndVegetable()">وريني</button>
       </div>
-      <p id="output" class="fade-in"></p>
+      <p id="output"></p>
     </div>
     <script src="./js/konafa.js"></script>
   </body>
