--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
       href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/konafa.css"/>
+    <link rel="stylesheet" href="./css/konafa.css" />
   </head>
   <body>
     <div class="lay"></div>
+    <div class="baka">
+      <img src="./imgs/r1.png" alt="" />
+      <img src="./imgs/r2.png" alt="" />
+    </div>
     <div class="container">
-      <h2 >لو كنت كنافة</h2>
-      <h3 >اختار يوم ميلادك مع الشهر وشوف وانت كنافة هتبقا ايه</h3>
+      <h2>لو كنت كنافة</h2>
+      <h3>اختار يوم ميلادك مع الشهر وشوف وانت كنافة هتبقا ايه</h3>
       <div class="flexo">
         <label for="birthday">(يوم / شهر)</label>
         <input type="text" id="birthday" placeholder="يوم/شهر" maxlength="5" />
